# customer-churn-prediction

./: .gitignore  LICENSE  Makefile  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: linters.yml  tests.yml
docs/: eda.ipynb
src/customer_churn_prediction/: data.py  delete_model.py  model.py  pipeline.py  predict.py  streamlit.py  train.py
tests/: test_data.py  test_pipeline.py  test_train.py
