[tool.poetry]
name = "customer_churn_prediction"
version = "0.1.0"
description = "Code and resources for a Kaggle competition on predicting customer churn using machine learning."
authors = ["Vladimir Rusakov <24524555+wervlad@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
lightautoml = "^0.3.7.3"
catboost = "^1.0.6"
tqdm = "^4.64.1"
jupyterlab-vim = "^0.15.1"
jupyterlab-theme-solarized-dark = "^2.1.0"
jupyterlab = "^3.4.7"
ipywidgets = "^8.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
